--- a/phuong.html
+++ b/phuong.html
@@ -481,7 +481,7 @@
                     <option value="google/gemini-2.0-pro-exp-02-05:free">Google: Gemini Pro 2.0 Experimental (free)</option>
                     <option value="google/gemini-2.0-flash-lite-preview-02-05:free">Google: Gemini Flash Lite 2.0 Preview (free)</option>
                     <option value="google/gemini-2.0-flash-thinking-exp:free">Google: Gemini 2.0 Flash Thinking Experimental 01-21 (free)</option>
-                    <option value="deepseek/deepseek-chat:free">Anthropic: DeepSeek: DeepSeek V3 (free)</option>
+                    <option value="deepseek/deepseek-chat:free">DeepSeek: DeepSeek: DeepSeek V3 (free)</option>
                 </select>
             </div>
             
